# country-population-service

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  get_data.py  main.py  models.py  print_data.py  pyproject.toml  repository.py
sources/: base.py  statisticstimes.py  wikipedia.py
