[project]
name = "devpower-test"
version = "0.1.0"
description = "Loads country population data into Postgres and prints per-region summaries"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]
